# Investor-Agent-Upsonic

Basic/: README.md  config.py  example_usage.py  investment_report_generator_upsonic.py  requirements.txt
Basic/reports/investment/: investment_report.md  research_analyst_report.md  stock_analyst_report.md
fastapi-uv/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  run_streamlit.py  start_project.py  test_workflow.py
fastapi-uv/reports/: 00301597-5fcf-4aad-b577-388bb77b734d_portfolio_strategy.md  00301597-5fcf-4aad-b577-388bb77b734d_research_analysis.md  00301597-5fcf-4aad-b577-388bb77b734d_stock_analysis.md  18a894f9-14ca-4369-8585-04ef32e9bb96_portfolio_strategy.md  18a894f9-14ca-4369-8585-04ef32e9bb96_research_analysis.md  18a894f9-14ca-4369-8585-04ef32e9bb96_stock_analysis.md  498aaa1c-6ca4-4be9-86e7-ec85793c248d_portfolio_strategy.md  498aaa1c-6ca4-4be9-86e7-ec85793c248d_research_analysis.md  498aaa1c-6ca4-4be9-86e7-ec85793c248d_stock_analysis.md  70eb5f06-58d3-44c5-9f73-06e5b6527cf1_portfolio_strategy.md  70eb5f06-58d3-44c5-9f73-06e5b6527cf1_research_analysis.md  70eb5f06-58d3-44c5-9f73-06e5b6527cf1_stock_analysis.md
fastapi-uv/src/: __init__.py
fastapi-uv/src/agents/: __init__.py  investment_lead.py  research_analyst.py  stock_analyst.py
fastapi-uv/src/api/: __init__.py  main.py
fastapi-uv/src/api/models/: __init__.py  schemas.py
fastapi-uv/src/api/routes/: analysis.py  health.py
fastapi-uv/src/config/: settings.py
fastapi-uv/src/frontend/: app.py
fastapi-uv/src/utils/: workflow.py
